--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^2.2.1
   get_it: ^8.2.0
   go_router: ^16.2.5
+  flutter_dotenv: ^6.0.0
  
 
 dev_dependencies:
@@ -66,6 +67,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/icons/
   fonts:
     - family: Satoshi
